[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/ZOMBIE/zombiederecho.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemigo.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ZOMBIE/zombieizq.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ZOMBIE/zombieneutro.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Zombie",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Zombie_Still",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 22.0227

[sub_resource type="CircleShape2D" id=5]
radius = 37.1148

[node name="Area2D" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Zombie_Still"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 1, 0.72549, 0, 1 )
position = Vector2( -4, 0 )
scale = Vector2( 0.701, 0.735 )
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
